--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <span class="fa fa-phone-alt me-2"></span>
-                    <span>+012 345 6789</span>
+                    <span>+2519 111 2345</span>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <span class="far fa-envelope me-2"></span>
@@ -85,35 +85,44 @@
                         <div class="services-box bg-light p-4">
                             <div class="row">
                                 <div class="col-lg-3 col-md-5 ">
-                                    <h5>Service Category 1</h5>
+                                    <a href"#" class="">
+                                        <h5>MT Seed Enterprises</h5>
+                                    </a>
                                     <ul class="list-unstyled">
-                                        <li>Service 1</li>
-                                        <li>Service 2</li>
-                                        <li>Service 3</li>
+                                        <li>Seed multiplication and distribution</li>
+                                        <li>Collaboration with research centers for improved seed varieties.</li>
+                                        <li>Timely delivery to ensure optimal planting windows.
+                                        </li>
                                     </ul>
                                 </div>
                                 <div class="col-lg-3 col-md-5 ">
-                                    <h5>Service Category 2</h5>
+                                    <h5>Mechanization Services Center
+                                    </h5>
                                     <ul class="list-unstyled">
-                                        <li>Service 1</li>
-                                        <li>Service 2</li>
-                                        <li>Service 3</li>
+                                        <li>Machinery rental for land preparation, planting, and post-harvest processing</li>
+                                        <li>Training programs for machine operators.
+                                        </li>
+                                        <li>Spare parts supply and maintenance services.</li>
                                     </ul>
                                 </div>
                                 <div class="col-lg-3 col-md-5 ">
-                                    <h5>Service Category 3</h5>
+                                    <h5>Crop Production Development
+                                    </h5>
                                     <ul class="list-unstyled">
-                                        <li>Service 1</li>
-                                        <li>Service 2</li>
-                                        <li>Service 3</li>
+                                        <li>Crop production on company and farmer-owned land.</li>
+                                        <li>Collaboration with local farmers to improve yields.
+                                        </li>
+                                        <li>Sale and distribution to agro-processing industries.</li>
                                     </ul>
                                 </div>
                                 <div class="col-lg-3 col-md-5 ">
-                                    <h5>Service Category 4</h5>
+                                    <h5>Agro-Input Dealer</h5>
                                     <ul class="list-unstyled">
-                                        <li>Service 1</li>
-                                        <li>Service 2</li>
-                                        <li>Service 3</li>
+                                        <li>Outsourcing and supply of fertilizers, agrochemicals, and other critical inputs.</li>
+                                        <li>Reliable distribution networks to ensure timely delivery.
+                                        </li>
+                                        <li>Focused support for smallholder farmers to boost their production capacity.
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
@@ -139,7 +148,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <h1 class="display-1 text-white mb-5 animated slideInDown">MT Seed Enterprises</h1>
-                                    <a href="" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
+                                    <a href="seed-interprise.html" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
                                 </div>
                             </div>
                         </div>
