--- a/agro-input.html
+++ b/agro-input.html
@@ -262,7 +262,7 @@
                             </div>
                             <div class="service-text rounded p-5">
                                 <div class="btn-square rounded-circle mx-auto mb-3">
-                                    <img class="img-fluid" src="img/icon/icon-3.png" alt="Icon">
+                                    <img class="img-fluid" src="img/icon/fertilizer.png" alt="Icon">
                                 </div>
                                 <h4 class="mb-3">Outsourcing and supply of fertilizers, agrochemicals, and other critical inputs.
                                 </h4>
@@ -279,7 +279,7 @@
                             </div>
                             <div class="service-text rounded p-5">
                                 <div class="btn-square rounded-circle mx-auto mb-3">
-                                    <img class="img-fluid" src="img/icon/icon-6.png" alt="Icon">
+                                    <img class="img-fluid" src="img/icon/distribution.png" alt="Icon">
                                 </div>
                                 <h4 class="mb-3">Reliable distribution networks to ensure timely delivery.</h4>
                                 <!--
@@ -296,7 +296,7 @@
                             </div>
                             <div class="service-text rounded p-5">
                                 <div class="btn-square rounded-circle mx-auto mb-3">
-                                    <img class="img-fluid" src="img/icon/icon-5.png" alt="Icon">
+                                    <img class="img-fluid" src="img/icon/boost.png" alt="Icon">
                                 </div>
                                 <h4 class="mb-3">Focused support for smallholder farmers to boost their production capacity.
                                     <!--
