--- a/crop-production.html
+++ b/crop-production.html
@@ -262,11 +262,11 @@
                             </div>
                             <div class="service-text rounded p-5">
                                 <div class="btn-square rounded-circle mx-auto mb-3">
-                                    <img class="img-fluid" src="img/icon/icon-3.png" alt="Icon">
+                                    <img class="img-fluid" src="img/icon/crop.png" alt="Icon">
                                 </div>
                                 <h4 class="mb-3">Crop production on company and farmer-owned land. </h4>
                                 <p class="mb-4">
-                                    We offer machinery rental services for every stage of farming, including land preparation, planting, and post-harvest processing. 
+                                    We produce a variety of high-value crops on both company and farmer-owned land, enhancing productivity and supporting local agriculture.
                                 </p>
                             </div>
                         </div>
@@ -278,12 +278,12 @@
                             </div>
                             <div class="service-text rounded p-5">
                                 <div class="btn-square rounded-circle mx-auto mb-3">
-                                    <img class="img-fluid" src="img/icon/icon-6.png" alt="Icon">
+                                    <img class="img-fluid" src="img/icon/collaboration.png" alt="Icon">
                                 </div>
                                 <h4 class="mb-3">Collaboration with local farmers to improve yields.
                                 </h4>
                                 <p class="mb-4">
-                                    We provide comprehensive training programs for machine operators, equipping them with the skills and knowledge needed to operate agricultural machinery effectively and safely.</p>
+                                    We collaborate with local farmers to boost crop yields and enhance agricultural productivity.</p>
                             </div>
                         </div>
                     </div>
@@ -294,12 +294,12 @@
                             </div>
                             <div class="service-text rounded p-5">
                                 <div class="btn-square rounded-circle mx-auto mb-3">
-                                    <img class="img-fluid" src="img/icon/icon-5.png" alt="Icon">
+                                    <img class="img-fluid" src="img/icon/sales.png" alt="Icon">
                                 </div>
                                 <h4 class="mb-3">Sale and distribution to agro-processing industries.
                                 </h4>
                                 <p class="mb-4">
-                                    We offer a complete range of spare parts supply and maintenance services to keep your machinery running smoothly. </p>
+                                    We handle the sale and distribution of crops to agro-processing industries, ensuring a steady supply of quality raw materials.</p>
                             </div>
                         </div>
                     </div>
