--- a/mechanization.html
+++ b/mechanization.html
@@ -260,7 +260,7 @@
                             </div>
                             <div class="service-text rounded p-5">
                                 <div class="btn-square rounded-circle mx-auto mb-3">
-                                    <img class="img-fluid" src="img/icon/icon-3.png" alt="Icon">
+                                    <img class="img-fluid" src="img/icon/mechanization.png" alt="Icon">
                                 </div>
                                 <h4 class="mb-3">Renting Mechanization Machineries </h4>
                                 <p class="mb-4">
@@ -276,7 +276,7 @@
                             </div>
                             <div class="service-text rounded p-5">
                                 <div class="btn-square rounded-circle mx-auto mb-3">
-                                    <img class="img-fluid" src="img/icon/icon-6.png" alt="Icon">
+                                    <img class="img-fluid" src="img/icon/mechanization-training.png" alt="Icon">
                                 </div>
                                 <h4 class="mb-3">Training Programs for Machine Operators</h4>
                                 <p class="mb-4">
@@ -291,7 +291,7 @@
                             </div>
                             <div class="service-text rounded p-5">
                                 <div class="btn-square rounded-circle mx-auto mb-3">
-                                    <img class="img-fluid" src="img/icon/icon-5.png" alt="Icon">
+                                    <img class="img-fluid" src="img/icon/spare-part.png" alt="Icon">
                                 </div>
                                 <h4 class="mb-3">Spare Parts Supply and Maintenance Services.
                                 </h4>
