--- a/seed-interprise.html
+++ b/seed-interprise.html
@@ -300,7 +300,7 @@
                             </div>
                             <div class="service-text rounded p-5">
                                 <div class="btn-square rounded-circle mx-auto mb-3">
-                                    <img class="img-fluid" src="img/icon/icon-3.png" alt="Icon">
+                                    <img class="img-fluid" src="img/icon/seed-distribution.png" alt="Icon">
                                 </div>
                                 <h4 class="mb-3">Seed multiplication and distribution.</h4>
                                 <p class="mb-4">We specialize in the multiplication and widespread distribution of high-quality seeds, ensuring that farmers have access to reliable and superior seed varieties.</p>
@@ -314,7 +314,7 @@
                             </div>
                             <div class="service-text rounded p-5">
                                 <div class="btn-square rounded-circle mx-auto mb-3">
-                                    <img class="img-fluid" src="img/icon/icon-6.png" alt="Icon">
+                                    <img class="img-fluid" src="img/icon/seed-variety.png" alt="Icon">
                                 </div>
                                 <h4 class="mb-3">Improving Seed Varieties</h4>
                                 <p class="mb-4">
@@ -329,7 +329,7 @@
                             </div>
                             <div class="service-text rounded p-5">
                                 <div class="btn-square rounded-circle mx-auto mb-3">
-                                    <img class="img-fluid" src="img/icon/icon-5.png" alt="Icon">
+                                    <img class="img-fluid" src="img/icon/time.png" alt="Icon">
                                 </div>
                                 <h4 class="mb-3">Timely delivery to ensure optimal planting windows</h4>
                                 <p class="mb-4">
