--- a/index.html
+++ b/index.html
@@ -69,9 +69,11 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
-        <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <h3 class="m-0">MA Business Group</h3>
+        <img  width="300px" src="img/MA.png" alt="Logo">
+         <!-- <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+             <h3 class="m-0">MA Business Group</h3>  
         </a>
+        -->
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -164,7 +166,7 @@
                                 <div class="col-lg-7">
                                     <h1 class="display-1 text-white mb-5 animated slideInDown">Mechanization Services Center
                                     </h1>
-                                    <a href="" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
+                                    <a href="mechanization.html" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
                                 </div>
                             </div>
                         </div>
@@ -180,7 +182,7 @@
                                 <div class="col-lg-7">
                                     <h1 class="display-1 text-white mb-5 animated slideInDown">Crop Production Development
                                     </h1>
-                                    <a href="" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
+                                    <a href="crop-production.html" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
                                 </div>
                             </div>
                         </div>
@@ -195,7 +197,7 @@
                                 <div class="col-lg-7">
                                     <h1 class="display-1 text-white mb-5 animated slideInDown">Agro-Input Dealer
                                     </h1>
-                                    <a href="" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
+                                    <a href="agro-input.html" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
                                 </div>
                             </div>
                         </div>
@@ -227,7 +229,7 @@
                 <div class="col-lg-17 wow fadeIn" data-wow-delay="0.1s">
                     <div class="bg-white shadow d-flex align-items-center justify-content-center h-100 px-5" style="min-height: 200px;">
                         <div class="text-center d-flex flex-column p-4">
-                            <h2>MT Business Group</h2>
+                            <h2>MA Business Group</h2>
                             <span>
                                 MA Business Group, founded in 2010 by Mandela Temesgen and Arsemawit Zagwe, is a diverse organization committed to tackling key challenges in Ethiopia's agricultural sector.
                             </span>
