--- a/blog1.html
+++ b/blog1.html
@@ -69,174 +69,156 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
-        <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <h1 class="m-0">Gardener</h1>
-        </a>
+        <img  width="200px" height="70px" src="img/MA.png" alt="Logo">
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="service.html" class="nav-item nav-link">Services</a>
-                <a href="project.html" class="nav-item nav-link">Projects</a>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
-                    <div class="dropdown-menu bg-light m-0">
-                        <a href="feature.html" class="dropdown-item active">Features</a>
-                        <a href="quote.html" class="dropdown-item">Free Quote</a>
-                        <a href="team.html" class="dropdown-item">Our Team</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
+                <a href="./" class="nav-item nav-link">Home</a>
+                <a href="about" class="nav-item nav-link">About</a>
+                <div class="nav-item dr">
+                    <a href="#" class="nav-link" data-bs-toggle="dropdown">Services</a>
+                    <div class="services-box">
+                        <div class="services-box bg-light p-4">
+                            <div class="row">
+                                <div class="col-lg-3 col-md-5">
+                                    <a href="seed-interprise" class="text-decoration-underline">
+                                        <h5>MT Seed Enterprises</h5>
+                                    </a>
+                                    <ul class="list-unstyled">
+                                        <li>Seed multiplication and distribution</li>
+                                        <li>Collaboration with research centers for improved seed varieties.</li>
+                                        <li>Timely delivery to ensure optimal planting windows.</li>
+                                    </ul>
+                                </div>
+                                <div class="col-lg-3 col-md-5">
+                                    <a href="mechanization" class="text-decoration-underline">
+                                        <h5>Mechanization Services Center</h5>
+                                    </a>
+                                    <ul class="list-unstyled">
+                                        <li>Machinery rental for land preparation, planting, and post-harvest processing</li>
+                                        <li>Training programs for machine operators.</li>
+                                        <li>Spare parts supply and maintenance services.</li>
+                                    </ul>
+                                </div>
+                                <div class="col-lg-3 col-md-5">
+                                    <a href="crop-production" class="text-decoration-underline">
+                                        <h5>Crop Production Development</h5>
+                                    </a>
+                                    <ul class="list-unstyled">
+                                        <li>Crop production on company and farmer-owned land.</li>
+                                        <li>Collaboration with local farmers to improve yields.</li>
+                                        <li>Sale and distribution to agro-processing industries.</li>
+                                    </ul>
+                                </div>
+                                <div class="col-lg-3 col-md-5">
+                                    <a href="crop-production" class="text-decoration-underline">
+                                        <h5>Agro-Input Dealer</h5>
+                                    </a>
+                                    <ul class="list-unstyled">
+                                        <li>Outsourcing and supply of fertilizers, agrochemicals, and other critical inputs.</li>
+                                        <li>Reliable distribution networks to ensure timely delivery.</li>
+                                        <li>Focused support for smallholder farmers to boost their production capacity.</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
+                
+                <a href="blog" class="nav-item nav-link active">Blog</a>
+                <a href="contact" class="nav-item nav-link">Contact Us</a>
             </div>
-            <a href="" class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block">Get A Quote<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
     </nav>
     <!-- Navbar End -->
-
-
-    <!-- Page Header Start -->
-    <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
-        <div class="container text-center py-5">
-            <h1 class="display-3 text-white mb-4 animated slideInDown">Features</h1>
-            <nav aria-label="breadcrumb animated slideInDown">
-                <ol class="breadcrumb justify-content-center mb-0">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Features</li>
-                </ol>
-            </nav>
-        </div>
-    </div>
-    <!-- Page Header End -->
-
-
-    <!-- Feature Start -->
-    <div class="container-fluid py-5">
-        <div class="container">
-            <div class="row gx-0">
-                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.1s">
-                    <div class="bg-white shadow d-flex align-items-center h-100 px-5" style="min-height: 160px;">
-                        <div class="d-flex">
-                            <div class="flex-shrink-0 btn-lg-square rounded-circle bg-light">
-                                <i class="fa fa-times text-primary"></i>
-                            </div>
-                            <div class="ps-3">
-                                <h4>No Hidden Cost</h4>
-                                <span>Clita erat ipsum lorem sit sed stet duo justo</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.3s">
-                    <div class="bg-white shadow d-flex align-items-center h-100 px-5" style="min-height: 160px;">
-                        <div class="d-flex">
-                            <div class="flex-shrink-0 btn-lg-square rounded-circle bg-light">
-                                <i class="fa fa-users text-primary"></i>
-                            </div>
-                            <div class="ps-3">
-                                <h4>Dedicated Team</h4>
-                                <span>Clita erat ipsum lorem sit sed stet duo justo</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.5s">
-                    <div class="bg-white shadow d-flex align-items-center h-100 px-5" style="min-height: 160px;">
-                        <div class="d-flex">
-                            <div class="flex-shrink-0 btn-lg-square rounded-circle bg-light">
-                                <i class="fa fa-phone text-primary"></i>
-                            </div>
-                            <div class="ps-3">
-                                <h4>24/7 Available</h4>
-                                <span>Clita erat ipsum lorem sit sed stet duo justo</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Feature End -->
-
-
-    <!-- Facts Start -->
-    <div class="container-fluid facts my-5 py-5" data-parallax="scroll" data-image-src="img/carousel-1.jpg">
-        <div class="container py-5">
-            <div class="row g-5">
-                <div class="col-sm-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.1s">
-                    <h1 class="display-4 text-white" data-toggle="counter-up">1234</h1>
-                    <span class="fs-5 fw-semi-bold text-light">Happy Clients</span>
-                </div>
-                <div class="col-sm-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.3s">
-                    <h1 class="display-4 text-white" data-toggle="counter-up">1234</h1>
-                    <span class="fs-5 fw-semi-bold text-light">Garden Complated</span>
-                </div>
-                <div class="col-sm-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.5s">
-                    <h1 class="display-4 text-white" data-toggle="counter-up">1234</h1>
-                    <span class="fs-5 fw-semi-bold text-light">Dedicated Staff</span>
-                </div>
-                <div class="col-sm-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.7s">
-                    <h1 class="display-4 text-white" data-toggle="counter-up">1234</h1>
-                    <span class="fs-5 fw-semi-bold text-light">Awards Achieved</span>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Facts End -->
-
-
     <!-- Features Start -->
     <div class="container-xxl py-5">
         <div class="container">
-            <div class="row g-5 align-items-center">
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <p class="fs-5 fw-bold text-primary">Why Choosing Us!</p>
-                    <h1 class="display-5 mb-4">Few Reasons Why People Choosing Us!</h1>
-                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-                    <a class="btn btn-primary py-3 px-4" href="">Explore More</a>
+            <div class="row g-5 align-items-start">
+                <div class="col-lg-4 " >
+                        <img class="img-fluid" src="img/blog/soya-bean.jpg"  alt="">
                 </div>
-                <div class="col-lg-6">
-                    <div class="row g-4 align-items-center">
-                        <div class="col-md-6">
-                            <div class="row g-4">
-                                <div class="col-12 wow fadeIn" data-wow-delay="0.3s">
-                                    <div class="text-center rounded py-5 px-4" style="box-shadow: 0 0 45px rgba(0,0,0,.08);">
-                                        <div class="btn-square bg-light rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
-                                            <i class="fa fa-check fa-3x text-primary"></i>
-                                        </div>
-                                        <h4 class="mb-0">100% Satisfaction</h4>
-                                    </div>
-                                </div>
-                                <div class="col-12 wow fadeIn" data-wow-delay="0.5s">
-                                    <div class="text-center rounded py-5 px-4" style="box-shadow: 0 0 45px rgba(0,0,0,.08);">
-                                        <div class="btn-square bg-light rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
-                                            <i class="fa fa-users fa-3x text-primary"></i>
-                                        </div>
-                                        <h4 class="mb-0">Dedicated Team</h4>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 wow fadeIn" data-wow-delay="0.7s">
-                            <div class="text-center rounded py-5 px-4" style="box-shadow: 0 0 45px rgba(0,0,0,.08);">
-                                <div class="btn-square bg-light rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
-                                    <i class="fa fa-tools fa-3x text-primary"></i>
-                                </div>
-                                <h4 class="mb-0">Modern Equipment</h4>
-                            </div>
-                        </div>
-                    </div>
+                <div class="col-lg-8 ">
+                    <h4>
+                        High-Quality Seeds for a Bountiful Harvest
+                    </h4>
+                    <p>
+                        One of the foundational elements of successful farming is the quality of the seeds used. At MT, we specialize in seed multiplication and distribution, offering farmers access to a wide range of improved seed varieties. Our collaboration with research centers ensures that we bring the latest and most resilient 
+                        seed varieties to the market, tailored to local growing conditions. This not only boosts yields 
+                        but also enhances crop quality, providing a strong foundation for a prosperous harvest.
+                    </br> </br>
+                        <b> Key Highlights:</b>
+                        <ul>
+                            <li> Improved Seed Varieties: Developed in collaboration with leading research centers.</li>
+                            <li>Timely Delivery: Ensuring seeds reach farmers at the optimal planting time.</li>
+                            <li>Increased Yields: Proven success stories from local farmers using our seeds</li>
+                        </ul>
+                    </p>
                 </div>
             </div>
         </div>
     </div>
     <!-- Features End -->
-
+    
+     <!-- Blog Start -->
+     <div class="container-fluid py-5 " data-wow-delay="0.1s">
+        <div class="container py-5">
+            <div class="row g-5">
+                <!--
+                    BLOG 1
+                -->
+                <div class="col-lg-4 wow slideInUp" data-wow-delay="0.3s">
+                    <div class="blog-item bg-light rounded overflow-hidden">
+                        <div class="blog-img position-relative overflow-hidden">
+                            <img class="img-fluid" src="img/blog/soya-bean.jpg"  alt="">
+                        </div>
+                        <div class="p-4">
+                            <h5 class="mb-3"> High-Quality Seeds for a Bountiful Harvest</h5>
+                            <p>
+                                One of the foundational elements of successful farming is the quality of the seeds used. At MA, 
+                                we specialize in seed multiplication and distribution, offering farmers access to a wide range of improved seed varieties. 
+                            </p>
+                            <a class="text-uppercase" href="blog1">Read More <i class="bi bi-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 w
+                ow slideInUp" data-wow-delay="0.3s">
+                    <div class="blog-item bg-light rounded overflow-hidden">
+                        <div class="blog-img position-relative overflow-hidden">
+                            <img class="img-fluid" src="img/blog/Tructor.jpg" alt="">
+                        </div>
+                        <div class="p-4">
+                            <h5 class="mb-3"> Machinery Rental: Enhancing Efficiency and Productivity</h5>
+                            <p>
+                                Modern agriculture requires efficient machinery to handle the demands of land preparation, planting, and post-harvest processing.
+                            </p>
+                            <a class="text-uppercase" href="blog2">Read More <i class="bi bi-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 w
+                ow slideInUp" data-wow-delay="0.3s">
+                    <div class="blog-item bg-light rounded overflow-hidden">
+                        <div class="blog-img position-relative overflow-hidden">
+                            <img class="img-fluid" src="img/blog/amhara-agriculture.jpg" alt="">
+                        </div>
+                        <div class="p-4">
+                            <h5 class="mb-3">Collaborative Crop Production: Partnering for Success</h5>
+                            <p>
+                                MT Crop Production, we believe in the power of collaboration. Our crop production services extend beyond our own fields;
+                                 we actively partner with local farmers to improve yields and quality.
+                            </p>
+                            <a class="text-uppercase" href="blog3">Read More <i class="bi bi-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Blog Start -->
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-light footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
