--- a/crop-production.html
+++ b/crop-production.html
@@ -146,7 +146,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <h1 class="display-1 text-white mb-5 animated slideInDown">MT Seed Enterprises</h1>
-                                    <a href="seed-interprise.html" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
+                                    <a href="seed-interprise" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
                                 </div>
                             </div>
                         </div>
@@ -154,7 +154,7 @@
                 </div>
 
 
-                <div class="carousel-item ">
+                <div class="carousel-item">
                     <img class="w-100" src="img/mechanization3.jpg" alt="Image">
                     <div class="carousel-caption">
                         <div class="container">
@@ -162,7 +162,7 @@
                                 <div class="col-lg-7">
                                     <h1 class="display-1 text-white mb-5 animated slideInDown">Mechanization Services Center
                                     </h1>
-                                    <a href="" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
+                                    <a href="mechanization" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
                                 </div>
                             </div>
                         </div>
@@ -178,7 +178,7 @@
                                 <div class="col-lg-7">
                                     <h1 class="display-1 text-white mb-5 animated slideInDown">Crop Production Development
                                     </h1>
-                                    <a href="" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
+                                    <a href="crop-production" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
                                 </div>
                             </div>
                         </div>
@@ -186,14 +186,14 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img class="w-100" src="img/agro-dealers.jpeg" alt="Image">
+                    <img class="w-100" src="img/agro-dealers.jpg" alt="Image">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-7">
                                     <h1 class="display-1 text-white mb-5 animated slideInDown">Agro-Input Dealer
                                     </h1>
-                                    <a href="" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
+                                    <a href="agro-input" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
                                 </div>
                             </div>
                         </div>
