--- a/seed-interprise.html
+++ b/seed-interprise.html
@@ -139,14 +139,14 @@
     <div class="container-fluid p-0 wow fadeIn" data-wow-delay="0.1s">
         <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-                <div class="carousel-item active">
+                <div class="carousel-item ">
                     <img class="w-100"  src="img/seed-enterprise.png" alt="Image">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <h1 class="display-1 text-white mb-5 animated slideInDown">MT Seed Enterprises</h1>
-                                    <a href="seed-interprise.html" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
+                                    <a href="seed-interprise" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
                                 </div>
                             </div>
                         </div>
@@ -162,7 +162,7 @@
                                 <div class="col-lg-7">
                                     <h1 class="display-1 text-white mb-5 animated slideInDown">Mechanization Services Center
                                     </h1>
-                                    <a href="mechanization.html" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
+                                    <a href="mechanization" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
                                 </div>
                             </div>
                         </div>
@@ -178,22 +178,22 @@
                                 <div class="col-lg-7">
                                     <h1 class="display-1 text-white mb-5 animated slideInDown">Crop Production Development
                                     </h1>
-                                    <a href="" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
+                                    <a href="crop-production" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="carousel-item">
-                    <img class="w-100" src="img/agro-dealers.jpeg" alt="Image">
+                <div class="carousel-item active">
+                    <img class="w-100" src="img/agro-dealers.jpg" alt="Image">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-7">
                                     <h1 class="display-1 text-white mb-5 animated slideInDown">Agro-Input Dealer
                                     </h1>
-                                    <a href="" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
+                                    <a href="agro-input" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
                                 </div>
                             </div>
                         </div>
