--- a/mechanization.html
+++ b/mechanization.html
@@ -3,10 +3,12 @@
 
 <head>
     <meta charset="utf-8">
-    <title>MA - Business Group</title>
+    <title>MA - Business Group |MT Seed Enterprise |Mechanization Service | Crop Production | Agro Input Dealer</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta name="keywords" content="mechanization services, seed enterprise ,crop production development ,agro input dealer,agriculture,farmer productivity,tructor,business group,Mandela Temesgen">
+    <meta content="
+    The Mechanization Services Center at MA Business Group is designed to bring modern agricultural equipment to the doorstep of Ethiopian farmers. Our goal is to reduce labor-intensive practices by providing machinery hire services that enhance productivity.
+    " name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
