--- a/blog1.html
+++ b/blog1.html
@@ -5,9 +5,10 @@
     <meta charset="utf-8">
     <title>MA - Business Group</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
-
+    <meta name="description" content=" 
+    MA Business Group, founded in 2010 by Mandela Temesgen and Arsemawit Zagwe, is a diverse organization committed to tackling key challenges in Ethiopia's agricultural sector.">
+    <meta name="keywords" content="mechanization services, seed enterprise ,crop production development ,agro input dealer,agriculture,farmer productivity,tructor,business group,Mandela Temesgen">
+    
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
