--- a/seed-interprise.html
+++ b/seed-interprise.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title>MA - Business Group</title>
+    <title>MA - Business Group |MT Seed Enterprise |Mechanization Service | Crop Production | Agro Input Dealer</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta name="keywords" content="mechanization services, seed enterprise ,crop production development ,agro input dealer,agriculture,farmer productivity,tructor,business group,Mandela Temesgen">
+    <meta content="
+    At MT Seed Enterprises, we specialize in seed multiplication to solve the longstanding issue of access to quality seeds for Ethiopian farmers. By working closely with research institutions and local agricultural offices, we ensure that the right seeds are available at the right time and place." name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -139,7 +140,7 @@
     <div class="container-fluid p-0 wow fadeIn" data-wow-delay="0.1s">
         <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-                <div class="carousel-item ">
+                <div class="carousel-item  active">
                     <img class="w-100"  src="img/seed-enterprise.png" alt="Image">
                     <div class="carousel-caption">
                         <div class="container">
@@ -185,7 +186,7 @@
                     </div>
                 </div>
 
-                <div class="carousel-item active">
+                <div class="carousel-item ">
                     <img class="w-100" src="img/agro-dealers.jpg" alt="Image">
                     <div class="carousel-caption">
                         <div class="container">
