--- a/service.html
+++ b/service.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <title>MA - Business Group</title>
+    <title>MA - Business Group |MT Seed Enterprise |Mechanization Service | Crop Production | Agro Input Dealer</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
+    <meta name="keywords" content="mechanization services, seed enterprise ,crop production development ,agro input dealer,agriculture,farmer productivity,tructor,business group,Mandela Temesgen">
     <meta content="" name="description">
 
     <!-- Favicon -->
