Search Engine Opimization title description and key words have been added

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>MA - Business Group</title>
+    <title>MA - Business Group |MT Seed Enterprise |Mechanization Service | Crop Production | Agro Input Dealer</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="description" content=" 
     MA Business Group, founded in 2010 by Mandela Temesgen and Arsemawit Zagwe, is a diverse organization committed to tackling key challenges in Ethiopia's agricultural sector.">
