--- a/about.html
+++ b/about.html
@@ -42,8 +42,8 @@
     <!-- Spinner End -->
 
 
-     <!-- Topbar Start -->
-     <div class="container-fluid bg-dark text-light px-0 py-2">
+    <!-- Topbar Start -->
+    <div class="container-fluid bg-dark text-light px-0 py-2">
         <div class="row gx-0 d-none d-lg-flex">
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center me-4">
@@ -59,9 +59,9 @@
                 <div class="h-100 d-inline-flex align-items-center mx-n2">
                     <span>Follow Us:</span>
                     <a class="btn btn-link text-light" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-link text-light" href=""><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-link text-light" href=""><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-link text-light" href=""><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-link text-light" href="https://x.com/MABusiness83189"><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-link text-light" href="https://www.linkedin.com/company/ma-business-group/ "><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-link text-light" href="https://www.youtube.com/channel/UCgFAWadgo16U1eGlSIl80jg"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
         </div>
@@ -230,10 +230,10 @@ Join us on our mission to transform Ethiopia’s agricultural sector and create 
                 </p>
                 <p class="mb-2"><i class="fa fa-envelope me-3"></i>mandelatemesgen@gmail.com </p>
                 <div class="d-flex pt-2">
-                    <a class="btn btn-square btn-outline-light rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-square btn-outline-light rounded-circle me-2" href="https://x.com/MABusiness83189"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-square btn-outline-light rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-square btn-outline-light rounded-circle me-2" href=""><i class="fab fa-youtube"></i></a>
-                    <a class="btn btn-square btn-outline-light rounded-circle me-2" href=""><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-square btn-outline-light rounded-circle me-2" href="https://www.youtube.com/channel/UCgFAWadgo16U1eGlSIl80jg"><i class="fab fa-youtube"></i></a>
+                    <a class="btn btn-square btn-outline-light rounded-circle me-2" href=" https://www.linkedin.com/company/ma-business-group/"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
