About Page Updated

--- a/about.html
+++ b/about.html
@@ -183,8 +183,8 @@ and effective solutions that enhance productivity, boost yields, and ultimately 
     
 <h5>Why Choose Us?</h5>
 <b>Comprehensive Solutions :</b> We offer a wide range of services that address the most pressing needs of Ethiopian farmers and agro-processors.
-<b>Sustainable Practices: </b>Our commitment to sustainability ensures that our solutions not only benefit today’s farmers but also future generations.
-    <b>Expertise and Innovation:</b> With a deep understanding of the agricultural sector and a focus on innovation, we are well-equipped to support Ethiopia’s agricultural growth.
+    </br><b>Sustainable Practices: </b>Our commitment to sustainability ensures that our solutions not only benefit today’s farmers but also future generations.
+    </br><b>Expertise and Innovation:</b> With a deep understanding of the agricultural sector and a focus on innovation, we are well-equipped to support Ethiopia’s agricultural growth.
 Community-Centric Approach: We work closely with local communities, ensuring that our efforts have a lasting, positive impact on the livelihoods of farmers across the country.
 Join us on our mission to transform Ethiopia’s agricultural sector and create a brighter, more sustainable future for all.
              
