--- a/agro-input.html
+++ b/agro-input.html
@@ -10,8 +10,7 @@
     <meta name="keywords" content="mechanization services, seed enterprise ,crop production development ,agro input dealer,agriculture,farmer productivity,tructor,business group,Mandela Temesgen">
     
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
-
+    <link href="img/ma_tab.ico" rel="icon">
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
