--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <meta name="author" content="Alphatech">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+
+
+    <link href="img/ma_tab.ico" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
