--- a/seed-interprise.html
+++ b/seed-interprise.html
@@ -10,7 +10,7 @@
     At Seed Enterprise, we specialize in seed multiplication to solve the longstanding issue of access to quality seeds for Ethiopian farmers. By working closely with research institutions and local agricultural offices, we ensure that the right seeds are available at the right time and place." name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/ma_tab.ico" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
